Fix blurryness in toolbar; walking in third person face the right direction

--- a/minecraft-js/style.css
+++ b/minecraft-js/style.css
@@ -46,7 +46,21 @@ h1 {
 .toolbar-icon {
   width: 64px;
   height: 64px;
-  outline: 4px solid rgb(58, 58, 58);;
+  outline: 4px solid rgb(58, 58, 58);
+}
+
+.toolbar-icon img {
+  width: 100%;
+  height: 100%;
+  image-rendering: pixelated;
+}
+
+img {
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-pixelated;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor; /* IE fallback */
 }
 
 .toolbar-icon.selected {
